# prism_qt_ui

./: .gitignore  CMakeLists.txt  usage  vcpkg.json  vcpkg_cus_info.json
cmake/: portfile.cmake  prism_qt_uiConfig.cmake.in  vcpkg.json.in
include/prism/qt/ui/: img_buffer_Info.h  prismQt_ui_global.h
include/prism/qt/ui/helper/: cpp_utility.h
include/prism/qt/ui/model/: roi_info.h
src/: prismQt_ui.cpp  prismQt_ui.h  prism_qt_ui.qrc
src/controls/forms/: datepickercpp.cpp  datepickercpp.h
src/controls/opengl/: logorenderer.cpp  logorenderer.h  threadrenderer.cpp  threadrenderer.h
src/controls/rhi/: rhi_video_render.cpp  rhi_video_render.h
src/controls/shapes/: video_roi_cpp.cpp  video_roi_cpp.h
src/controls/vnc/: vncitem.cpp  vncitem.h
src/controls/vulkan/: vulkanCustomTextureItem.cpp  vulkanCustomTextureItem.h  vulkancustomtexture.cpp  vulkancustomtexture.h  vulkancustomtexturenode.cpp  vulkancustomtexturenode.h
src/controls/window/: qml_debug_window.cpp  qml_debug_window.h
src/etc/: qt.conf
src/helper/: cpp_utility.cpp  img_buffer_Info.cpp  menuhelper.cpp  menuhelper.h
src/platform/: i_borderless_window_helper.h
src/platform/os_macx/: borderless_window_mac.h  borderless_window_mac.mm
src/platform/os_win/: borderless_window_helpe_win.cpp  borderless_window_helpe_win.h  borderless_window_win.cpp  borderless_window_win.h  dpiscaleeventfilter.cpp  dpiscaleeventfilter.h  multi_screen_helper_win.cpp  multi_screen_helper_win.h
src/prism_qt_ui/: qmldir
src/prism_qt_ui/PrismUI/: qmldir
src/prism_qt_ui/PrismUI/button/: BorderIconButton.qml  DropdownButton.qml
src/prism_qt_ui/PrismUI/debug/: Live_loader.qml
src/prism_qt_ui/PrismUI/forms/: DateTimePicker.qml
src/prism_qt_ui/PrismUI/input/: EightWayPtzDial.qml
src/prism_qt_ui/PrismUI/shapes/: CornersMask.qml  CusCornersImage.qml  CusCornersItem.qml  CusCornersRec.qml  ItemViewer.qml  SvgIcon.qml  Video_Item.qml  video_Canvas.qml
src/prism_qt_ui/PrismUI/spinbox/: DoubleSpinbox.qml
src/prism_qt_ui/PrismUI/window/: BorderlessWindow_linux.qml  DesktopMenu.qml  DesktopMenuItem.qml  DesktopPopup.qml  QmlDebugWindow.qml  QmlWindowRoot.qml  Toastify.qml  ToastifyDelegate.qml
src/prism_qt_ui/PrismUi/: qmldir
src/prism_qt_ui/PrismUi/button/: IconButton.qml
src/prism_qt_ui/PrismUi/debug/: Live_loader.qml
src/prism_qt_ui/PrismUi/forms/: DatePicker.qml
src/prism_qt_ui/PrismUi/js/: Js_extension.js
src/prism_qt_ui/PrismUi/shapes/: CusCornersRec.qml  SvgIcon.qml  video_Canvas.qml  video_ROI.qml  video_ROI2.qml
src/prism_qt_ui/PrismUi/theme/: Style.qml
src/prism_qt_ui/PrismUi/window/: BorderlessWindow_linux.qml  BorderlessWindow_win.qml  DefaultPopup.qml
src/prism_qt_ui/Shaders/: bgr24.frag  bgra32.frag  image_2d.vert  mono8.frag  nv12.frag  rgb24.frag  rgba32.frag  yuv420p.frag
src/prism_qt_ui/Shaders/qsb/: bgra32.frag.qsb  image_2d.vert.qsb  mono8.frag.qsb  nv12.frag.qsb  yuv420p.frag.qsb
src/prism_qt_ui/button/: BorderIconButton.qml  DropdownButton.qml  IconButton.qml
src/prism_qt_ui/debug/: Live_loader.qml
src/prism_qt_ui/forms/: DatePicker.qml  DateTimePicker.qml
src/prism_qt_ui/js/: Js_extension.js
src/prism_qt_ui/shapes/: CusCornersImage.qml  ItemViewer.qml  SvgIcon.qml  video_Canvas.qml  video_ROI.qml  video_ROI2.qml
src/prism_qt_ui/window/: BorderlessWindow_linux.qml  BorderlessWindow_mac.qml  BorderlessWindow_win.qml  DefaultPopup.qml  DesktopMenu.qml  DesktopMenuItem.qml  DesktopMenuSeparator.qml  DesktopPopup.qml  QmlDebugWindow.qml  QmlWindowRoot.qml
src/validator/: datetime_validator.cpp  datetime_validator.h
